# uw

./: README.md  application.md  pyproject.toml
Lesson01/: Mlearn510-Lesson01-Mateusz_Haligowski.ipynb  lab1_intro_pandas_quiz.ipynb
Lesson02/: MLEARN510-Lesson02-Mateusz_Haligowski.ipynb
Lesson03/: ML510-Lesson3.ipynb  MLEARN510-Lesson03-Mateusz_Haligowski.html  MLEARN510-Lesson03-Mateusz_Haligowski.ipynb
Lesson04/: Mlearn510-Lesson04-Mateusz_Haligowski.html  Mlearn510-Lesson04-Student_Name.ipynb
mlearn510/: pyproject.toml
mlearn520/: pyproject.toml
mlearn520/Lesson01/: ML520 - Lesson1 - Mateusz Haligowski.html  ML520 - Lesson1 - Mateusz Haligowski.ipynb
mlearn520/Lesson02/: MLEARN 520- Lesson 2 - Matesusz Haligowski.html  MLEARN 520- Lesson 2 - Matesusz Haligowski.ipynb
mlearn520/Lesson03/: ML520 - Lesson3 - Mateusz Haligowski.html  ML520 - Lesson3 - Mateusz Haligowski.ipynb
mlearn520/Lesson04/: MLEARN 520- Lesson 4 - Mateusz Haligowski.html  MLEARN 520- Lesson 4 - Mateusz Haligowski.ipynb  MLEARN 520- Lesson 5 - Mateusz Haligowski.ipynb
mlearn520/Lesson05/: ML520 - Lesson5 - Mateusz Haligowski.html  ML520 - Lesson5 - Mateusz Haligowski.ipynb
mlearn520/Lesson06/: ML520 - Lesson6 - Mateusz Haligowski.html  ML520 - Lesson6 - Mateusz Haligowski.ipynb
mlearn520/Lesson07/: ML520 - Lesson7 - Mateusz Haligowski.html  ML520 - Lesson7 - Mateusz Haligowski.ipynb
mlearn520/Lesson08/: MLEARN 530-Lesson 8-Mateusz Haligowski.html  MLEARN 530-Lesson 8-Mateusz Haligowski.ipynb
mlearn520/Lesson09/: MLEARN 520 - Lesson 9 - Mateusz Haligowski.ipynb
(+17 files in other folders)
