[tool.poetry]
name = "uw"
version = "0.1.0"
description = ""
authors = ["Mateusz Haligowski <mhaligowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.1"
numpy = "^1.26.4"
pandas = {extras = ["parquet"], version = "^2.2.1"}
seaborn = "^0.13.2"
scikit-learn = "^1.4.0"
notebook = "^7.0.7"
xgboost = "^2.0.3"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
