[tool.poetry]
name = "mlearn520"
version = "0.1.0"
description = ""
authors = ["Mateusz Haligowski <mhaligowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
ipykernel = "^6.29.4"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
